feat : detail 에러수정, 반납, 예약시 소장정보 동적으로 변경